fixed class on menu, wasnt showing overflow otherwise

--- a/src/styles/menus.less
+++ b/src/styles/menus.less
@@ -15,7 +15,7 @@
     background-color: white;
     overflow: visible;
 
-    .ui-tooltip-content{
+    .qtip-content{
         overflow: visible;
         padding: 0;
     }
